# sandboxing

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile.control-plane  README.md  SPECIFICATION.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml  (+1 more)
api/: audit.py  auth.py  config.py  docker_client.py  errors.py  exec.py  files.py  idempotency.py  mcp_server.py  metrics.py  models.py  orphan_reaper.py  processes.py  quota.py  reaper.py  registry.py  sampler.py  server.py  sessions.py
deploy/: .env.compose.example  README.md  backup.env.example  backup.sh  iptables-setup.sh  iptables.env.example  sandbox-api.service  sandbox-backup.service  sandbox-backup.timer  sandbox-iptables.service  sandbox-quota-helper.sh  sandbox.logrotate  setup-host.sh  upgrade-sandbox-image.sh  xfs-quota-setup-compose.sh  xfs-quota-setup.sh.example  xfs-quota-teardown-compose.sh  xfs-quota-teardown.sh.example
docs/: CAPACITY.md  DEPLOY.md  MCP.md  SETUP.md  TESTING.md  openapi.json
proxy/: .dockerignore  Dockerfile  allowed-domains.txt  squid.conf
sandbox/: Dockerfile
tests/: conftest.py  test_activity_pin.py  test_audit.py  test_auth.py  test_docker_client.py  test_exec.py  test_files.py  test_idempotency.py  test_lifecycle.py  test_mcp.py  test_metrics.py  test_openapi_contract.py  test_orphan_reaper.py  test_processes.py  test_quota.py  test_reaper.py  test_reconcile.py  test_sampler.py  test_stream.py  test_tenants_api.py  test_token_scopes.py
tools/: dump_openapi.py  sandbox_capacity_calc.py  sandbox_tenants.py  smoke-remote.sh  validate-slices.sh
(+18 files in other folders)
